[gd_scene load_steps=4 format=3 uid="uid://cd38e14236m5u"]

[ext_resource type="Texture2D" uid="uid://r05oud0to665" path="res://assets/img/inventory-background.png" id="1_efp2u"]
[ext_resource type="Script" path="res://source/ui/pet_introduction_ui.gd" id="1_ss72o"]
[ext_resource type="Texture2D" uid="uid://bhfjprgp4pnof" path="res://assets/img/Pets/capybara.png" id="2_ljxed"]

[node name="PetIntroductionUI" type="Control" groups=["PetIntroductionUI"]]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ss72o")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -102.5
offset_right = 197.0
offset_bottom = 102.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_efp2u")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="ContinueButton" type="Button" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 47.5
offset_right = 60.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
text = "Continue"

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -38.5
offset_right = 104.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="PetImage" type="TextureRect" parent="NinePatchRect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(86, 86)
layout_mode = 2
texture = ExtResource("2_ljxed")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NameLabel" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name: Jeff"

[node name="AnimalLabel" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Animal: Capybara"

[node name="StayLabel" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Stay Duration: 1 day"

[connection signal="pressed" from="NinePatchRect/ContinueButton" to="." method="_on_continue_button_pressed"]
